# GeoSVG-RL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-train.txt  requirements.txt
configs/: full_qwen7b.yaml  smoke.yaml
docs/: DATASET.md  METRICS.md  REPRODUCIBILITY.md
examples/: example_prompt.json  run_inference.py
scripts/: evaluate.sh  generate_dataset.sh  smoke_test.sh  train_grpo.sh  train_sft.sh
src/geosvg_rl/: __init__.py
src/geosvg_rl/eval/: evaluate.py
src/geosvg_rl/models/: generate.py  hf_io.py  prompts.py
src/geosvg_rl/training/: grpo_utils.py  train_grpo.py  train_sft.py
src/geosvg_rl/utils/: jsonl.py  seed.py
src/geosvg_rl/verifier/: __init__.py  browser.py  geometry.py  metrics.py  reward.py  verifier.py  xml_parser.py
tests/: test_data_generation.py  test_reward.py  test_verifier.py
